// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteButton renders heart icon when isFavorite is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
      "paddingVertical": 20,
    }
  }
  testID="favorite-button"
>
  <Text
    style={
      {
        "color": "#ff0000",
        "fontSize": 30,
      }
    }
    testID="icon"
  >
    heart
  </Text>
</View>
`;

exports[`FavoriteButton renders heart-o icon when isFavorite is false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
      "paddingVertical": 20,
    }
  }
  testID="favorite-button"
>
  <Text
    style={
      {
        "color": "#ff0000",
        "fontSize": 30,
      }
    }
    testID="icon"
  >
    heart-o
  </Text>
</View>
`;
